# game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  opencv.cpp
data/: basicFragmentShader.glsl  basicVertexShader.glsl
setup/: setup_ubuntu.sh
src/glsl/: CMakeLists.txt
src/glsl/utils/: glslUtils.c  glslUtils.h  glslUtils.test.c
src/img/: CMakeLists.txt
src/img/loadImg/: loadImg.c  loadImg.h
src/img/loadImg/loadJpg/: loadJpg.c  loadJpg.h
src/img/loadImg/loadPng/: loadPng.c  loadPng.h  loadPng.test.c
src/img/types/: image_t.h
src/testUtils/: testUtils.h
src/utils/: CMakeLists.txt
src/utils/byteSwap/: byteSwap.c  byteSwap.h  byteSwap.test.c
src/utils/loadFile/: loadFile.c  loadFile.h  loadFile.test.c
